--- a/exercicios/ex022/iframe01.html
+++ b/exercicios/ex022/iframe01.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iframes</title>
+    <style>
+        iframe {
+            height: 350px;
+            width: 400px;
+            border: 2px dashed black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do
 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500px"><a href="https://www.cursoemvideo.com" target="_blank">Curso em Video</a></iframe>
 
         para aprender a programar
     </p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> é muito legal</p>
+    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"><a href="https://www.google.com.br">Google</a></iframe> é muito legal, mas mão funciona no iframe</p>
+    <p>
+        O repositório do guanabara
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500px" width="500px">no <a href="https://gustavoguanabara.github.io">GitHub</a></iframe>
+    </p>
 </body>
 </html>
