--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <div id="celular"><img src="imagens/frame-iphone.png" alt=""></div>
-    <div class="icon" id="home"><img src="imagens/logo-home.jpg" alt=""></div>
-    <div class="icon" id="youtube"><img src="imagens/logo-youtube.jpg" alt=""></div>
-    <div class="icon" id="github"><img src="imagens/logo-github.jpg" alt=""></div>
-    <div class="icon" id="instagram"><img src="imagens/logo-instagram.jpg" alt=""></div>
-    <div class="icon" id="twitter"><img src="imagens/logo-twitter.jpg" alt=""></div>
-    <div class="icon" id="facebook"><img src="imagens/logo-facebook.jpg" alt=""></div>
+    <main>
+        <section id="telefone">
+            
+        </section>
+        <section id="redes">
+
+        </section>
+    </main>
 </body>
 </html>
