--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -11,10 +11,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe name="tela" id="tela" src="paginas/home.html" frameborder="0"></iframe>
+            <iframe name="tela" id="tela" src="paginas/home.html" frameborder="0">
+                Seu navegador não é compatível!
+            </iframe>
         </section>
         <section id="redes">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
         </section>
     </main>
 </body>
