Adicionei as páginas das redes sociais

--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -16,12 +16,12 @@
             </iframe>
         </section>
         <section id="redes">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="paginas/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="paginas/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a> <br>
+            <a href="paginas/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
+            <a href="paginas/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="paginas/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+            <a href="paginas/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
         </section>
     </main>
 </body>
