--- a/exercicios/ex023/form01.html
+++ b/exercicios/ex023/form01.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form autocomplete="off">
-        <p>Nome: 
-            <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
-        <p>
-            <input type="submit" value="Enviar"></p>
+    <form action="cadastro.php" autocomplete="off">
+        <p><label for="onome">Nome:</label> 
+            <input type="text" name="nome" id="onome"></p>
+        <p><label for="osobrenome">Sobrenome:</label> 
+            <input type="text" name="sobrenome" id="osobrenome"></p>
+        <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
 </html>
