Exercícios 2 e 3 de formulário

--- a/exercicios/ex023/form01.html
+++ b/exercicios/ex023/form01.html
@@ -13,8 +13,8 @@
     </style>
 </head>
 <body>
-    <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php" autocomplete="off">
+    <h1>Formulário</h1>
+    <form action="cadastro.php" method="POST" autocomplete="off">
         <p><label for="onome">Nome:</label> 
             <input type="text" name="nome" id="onome"></p>
         <p><label for="osobrenome">Sobrenome:</label> 
